# Duplexer

./: .gitignore  README.md  com.github.nxmbit.duplexer.json  duplexer.doap  meson.build  python3-flatpak-dependencies.json  requirements.txt
data/: com.github.nxmbit.duplexer.appdata.xml.in  com.github.nxmbit.duplexer.desktop.in  com.github.nxmbit.duplexer.gschema.xml  meson.build
data/icons/: meson.build
duplexer/: main.py  meson.build
duplexer/backend/: cli.py  constants.py  dbus_server.py  ipc_server.py  meson.build  printer_manager.py  xdg_globals.py
duplexer/backend/ipc/: dbus_handler.py  dbus_service.py  duplexer_dbus.xml.in  ipc_handler.py  meson.build  socket_handler.py  socket_server.py
duplexer/filter/: duplexer_filter
duplexer/frontend/: meson.build
duplexer/proto/: duplexer_ipc.proto  meson.build
duplexer/selinux/: duplexer.pp
duplexer/ui/: setup_window.xml
po/: POTFILES  meson.build
src/: constants.py  duplexer.gresource.xml  duplexer.in  ipc_server.py  main.py  meson.build  window.py  window.ui
src/backend/: cli.py  ipc_handler.py  ipc_server.py  meson.build  printer.py  printer_manager.py  testwindow.py
src/filter/: duplexer_filter  duplexer_filter_old  duplexer_ipc_pb2.py  install_filter.sh
src/proto/: duplexer_ipc_pb2.py
src/selinux/: duplexer.te
