backend_dir = join_paths(moduledir, 'backend')

backend_sources = [
  '__init__.py',
  'cli.py',
  'constants.py',
  'ipc_handler.py',
  'socket_server.py',
  'printer.py',
  'printer_manager.py',
  'xdg_globals.py',
  'testwindow.py',
]

py_installation.install_sources(backend_sources, subdir: backend_dir)